add logout & refresh controllers
